tooling/nargo_cli/tests/snapshots/execute__tests__brillig_fns_as_values_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "9098475728071411324",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VS0QrCMAzsXEWrKKLod2RsY3v0wR8pjn7HPn0MLjSEspe1ebmEpNe7ppWJUQGtqk1i5gukfdFk5KKk0K3gmQ/QAQ+iX2c069S9OflH6nqX8JdRf+vAWfJ9mLMAP53A85sjv/ZiBPKcPrP2b8jlP+OZM/qc35E7dabE/gvuh14J/XzXFV4foub/aOf8eoaRiHXU4D+auDsZVvTl/Bv1RfhhtDt0hsE3ofXB936aur9/Kn6j3m0BIk9j/oUFAAA=",
  "debug_symbols": "XYzBCoAgEET/Zc8dskOHfiUi1DZZEBXTIGT/PYUO4WXgzWOmwIEqm53c6S9Y1gLWa5nIu0qFB1CRrCWzd/UtI0ll8cMzO/2z6QnY7UP0Go8csT01B2MLUXMV8zCJjZk3fgE=",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
